BradkenProduction/force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>The Transactions executed for an Invoice (e.g. Payments, Credit Notes, Manual Adjustments)</description>
    <label>Transaction</label>
    <nameField>
        <label>Document ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>