BradkenProduction/force-app/main/default/objects/Transaction__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <description>The date this transaction was recorded in the system</description>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>