BradkenProduction/force-app/main/default/objects/Transaction__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>The type of transaction</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>