BradkenProduction/force-app/main/default/objects/Transaction__c/fields/HistoricalSalesRep__c.field-meta.xml
<CustomField>
    <fullName>HistoricalSalesRep__c</fullName>
    <label>Historical Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>