BradkenProduction/force-app/main/default/objects/Transaction__c/fields/OrderRecordID__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordID__c</fullName>
    <description>SF Sales Order record ID (15/18 digit)</description>
    <formula>UnibisSalesOrder__r.Id</formula>
    <label>OrderRecordID</label>
    <type>Text</type>
</CustomField>