BradkenProduction/force-app/main/default/objects/Transaction__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <description>The Purchase Order Number against which the Invoice was generated for which this transaction was recorded.</description>
    <label>Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>