BradkenProduction/force-app/main/default/objects/Transaction__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Sales Rep who owns the transaction and the parent Invoice. This (Rep) may be different to the Sales Rep who owns the Account record.</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>