BradkenProduction/force-app/main/default/objects/Transaction__c/fields/UnibisAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>UnibisAccountNumber__c</fullName>
    <description>The account number prefixed with the Unibis country Code as sent from Unibis</description>
    <label>Unibis Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>