BradkenProduction/force-app/main/default/objects/Transaction__c/fields/UnibisDocID__c.field-meta.xml
<CustomField>
    <fullName>UnibisDocID__c</fullName>
    <description>The unique identifier from Unibis. Contains Unibis Country Code (First Three Characters) followed by Document ID followed by &apos;Apply To&apos; document ID</description>
    <externalId>true</externalId>
    <label>Unibis Doc ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>