BradkenProduction/force-app/main/default/objects/Transaction__c/fields/UnibisSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>UnibisSalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Unibis Sales Order Number against which this Invoice / Transaction was recorded</description>
    <label>SF Sales Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>