BradkenProduction/force-app/main/default/objects/Transaction__c/fields/UnibisSalesOrderHyperlink__c.field-meta.xml
<CustomField>
    <fullName>UnibisSalesOrderHyperlink__c</fullName>
    <description>Unibis Sales Order number</description>
    <formula>HYPERLINK(&quot;/lightning/r/Order/&quot;&amp;OrderRecordID__c&amp;&quot;/view&quot;, UnibisOrderNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unibis Sales Order</label>
    <type>Text</type>
</CustomField>